--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-emoji": "^0.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
