--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "emoji-mart": "^5.6.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-emoji": "^0.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-emoji": "^0.5.0"
   }
 }
